# config_lite

./: Cargo.toml  README.md
.github/workflows/: general.yml
config/: default.json  default.yaml  test.json
src/: error.rs  lib.rs  utils.rs
src/parser/: json.rs  mod.rs  yaml.rs
tests/: test_config.rs  test_json_config.rs  test_yaml_config.rs
