[package]
authors = ["Collins Muriuki <hello@collinsmuriuki.xyz>"]
description = "A lightweight and customizable configuration management library for binary crates"
edition = "2018"
keywords = ["config", "configurations"]
license = "MIT"
name = "config_lite"
readme = "README.md"
repository = "https://github.com/collinsmuriuki/config_lite"
version = "1.0.0-beta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
regex = "1.5.5"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
